src/test/ui/generator/auto-trait-regions.stderr
error[E0308]: mismatched types
  --> $DIR/auto-trait-regions.rs:30:5
   |
LL |     assert_foo(gen);
   |     ^^^^^^^^^^ lifetime mismatch
   |
   = note: expected type `Foo`
              found type `Foo`
   = note: lifetime RePlaceholder(Placeholder { universe: U31, name: BrAnon(1) })...
   = note: ...does not necessarily outlive the static lifetime

error[E0308]: mismatched types
  --> $DIR/auto-trait-regions.rs:30:5
   |
LL |     assert_foo(gen);
   |     ^^^^^^^^^^ lifetime mismatch
   |
   = note: expected type `Foo`
              found type `Foo`
   = note: lifetime RePlaceholder(Placeholder { universe: U35, name: BrAnon(1) })...
   = note: ...does not necessarily outlive the static lifetime

error: implementation of `Foo` is not general enough
  --> $DIR/auto-trait-regions.rs:49:5
   |
LL |     assert_foo(gen);
   |     ^^^^^^^^^^
   |
   = note: `A<'0, '1>` must implement `Foo` for any two lifetimes `'0` and `'1`
   = note: but `A<'_, '2>` only implements `Foo` for some lifetime `'2`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
